<resources>
    <string name="app_name">Mathmanica</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="settings"><![CDATA[Settings & \nDifficulty]]></string>
    <string name="game_mode">Game \nModes</string>
    <string name="quick_game_2_lines">Quick \nGame</string>
    <string name="title_activity_settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_taken">Username already taken.</string>
    <string name="wrong_password">Wrong password.</string>
    <string name="username_does_not_exist">Username does not exist.</string>
    <string name="very_easy">Very Easy</string>
    <string name="canceling_permissions">Canceling Permissions</string>
    <string name="cancel_permissions_dialog_text">Are you sure that you want to cancel all permissions?</string>
    <string name="logging_out">Logging out</string>
    <string name="delete_account_and_saved_data">Delete Account and Saved Data</string>
    <string name="end_run">End Run</string>
    <string name="retry">Retry</string>
    <string name="about_description">Designed and Developed with Love by Siraj at sirajsaleem.com\n\nCheck my website for more applications</string>
    <string name="visit">visit</string>
    <string name="dismiss">dismiss</string>
    <string name="dashes">-----</string>
    <string name="dashes_x2">----------</string>
    <string name="quick_game">Quick Game</string>
    <string name="time_trial">Time Trial</string>
    <string name="streak">Streak</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="num1">1.</string>
    <string name="num2">2.</string>
    <string name="num4">4.</string>
    <string name="num5">5.</string>
    <string name="num6">6.</string>
    <string name="num3">3.</string>
    <string name="num7">7.</string>
    <string name="num8">8.</string>
    <string name="num9">9.</string>
    <string name="num10">10.</string>
    <string name="unregistered_rank">20.</string>
    <string name="your_rank">YOUR RANK:</string>
    <string name="cutter">|</string>
    <string name="default_number">555</string>
    <string name="addition">+</string>
    <string name="equal">=</string>
    <string name="question_mark">\?</string>
    <string name="first_choice">A) 555</string>
    <string name="second_choice">B) 555</string>
    <string name="third_choice">C) 555</string>
    <string name="fourth_choice">D) 555</string>
    <string name="your_score">YOUR SCORE</string>
    <string name="default_number_x2">5555</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="level">Level:</string>
    <string name="level_num">1</string>
    <string name="add_25">+25</string>
    <string name="difficulty">Difficulty</string>
    <string name="chose_difficulty">Chose Difficulty</string>
    <string name="log_in_register">Log in/Register</string>
    <string name="log_out">Log out</string>
    <string name="cancel_permissions">Cancel Permissions</string>
    <string name="delete_account_and_all_saved_data">Delete Account and All Saved Data</string>
    <string name="about">ABOUT</string>
    <string name="streak_mode">Streak Mode</string>
    <string name="add_1">+1</string>
    <string name="your_streak">Your Streak</string>
    <string name="time_remaining">TIME REMAINING</string>
    <string name="time_trial_mode">Time Trial Mode</string>
    <string name="start">Start</string>
    <string name="double_zero">00</string>
    <string name="colon">:</string>
    <string name="zero_one">01</string>
    <string name="your_score_with_colon">Your Score:</string>
    <string name="num0">0</string>
    <string name="add_30s">+30s</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="password_with_3_dots">Password…</string>
    <string name="deleting_account_dialog_text">Are you sure that you want to delete your account and saved data?\n\nYou will not be able to retrieve your data</string>
    <string name="logging_out_dialog_text">Are you sure that you want to log out?\n\nYour scores will not be updated on the leaderboards.</string>
    <string name="statistics_permission">Statistics Permission</string>
    <string name="statistic_permission_dialog_text"><![CDATA[Allow My Library to access information such as length and frequency of application usage as well as geographical region.\n\nYou can cancel permission at anytime from Settings & Difficulty -> Cancel Permissions]]></string>
    <string name="deny">deny</string>
    <string name="allow">allow</string>
    <string name="dont_show_message">Don\'t show this dialog again</string>
    <string name="choose_game_mode">Choose Game Mode</string>
    <string name="username">Username…</string>
    <string name="skip">Skip</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password_doesnt_match">Password does not match.\nMake sure the passwords are the same.</string>
    <string name="enter_username">Enter a username.</string>
    <string name="log_in_x2">Log In</string>
    <string name="enter_your_password">Enter your password.</string>
    <string name="your_streak_is">Your streak is:</string>
    <string name="exit">EXIT</string>
    <string name="cancel">CANCEL</string>
    <string name="sure_ending_run">Are you sure, you want to end this run?</string>
    <string name="error_signing_in">Error signing up/logging in, please check connection</string>
    <string name="level_with_space">Level&#160;</string>
    <string name="add_10">+10</string>
    <string name="add_15">+15</string>
    <string name="add_20">+20</string>
    <string name="you_are_not_online">You are not connected to the internet, your score will not be recorded</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="subtraction">-</string>
    <string name="deleted">&#160;has been deleted!</string>
    <string name="streak_with_space">Streak&#160;</string>
</resources>